syntax = "proto3";
package SuperShop;

option csharp_namespace = "SuperShop.GrpcServer.Protos";

import "google/protobuf/empty.proto";

service CategoryService
{
	rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse);
    rpc GetCategories(google.protobuf.Empty) returns (stream GetCategoryResponse); // List<GetCategoryResponse>
}

service ProductService
{
    rpc DeleteProducts(stream DeleteProductRequest) returns (google.protobuf.Empty);
    rpc CreateProducts(stream CreateProductRequest) returns (stream CreateProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc EditProduct(EditProductRequest) returns (EditProductResponse);
    rpc GetProducts(google.protobuf.Empty) returns (stream GetProductResponse);
    rpc GetProductsByCategory(GetProductsByCategoryRequest) returns (stream GetProductsByCategoryResponse);
    rpc GetDrinks(google.protobuf.Empty) returns (stream GetDrinksResponse);
}

message DeleteProductRequest
{
    int32 product_id=1;
}

message GetProductRequest
{
    int32 product_id=1;
}

message GetCategoryRequest
{
	int32 category_id=1;
}

message GetCategoryResponse
{
    int32 category_id=1;
    string category_name=2;
    string description=3;
    bytes picture=4;
}

message CreateProductRequest
{
    string product_name=1;
    double unit_price=2;
    int32 units_in_stock=3;
    int32 category_id=4;
}

message CreateProductResponse
{
    int32 product_id=1;
    string product_name=2;
    double unit_price=3;
    int32 units_in_stock=4;
    bool discontinued=5;
    int32 category_id=6;
}

message GetProductResponse
{
    int32 product_id=1;
    string product_name=2;
    double unit_price=3;
    int32 units_in_stock=4;
    bool discontinued=5;
    int32 category_id=6;
}

message EditProductRequest
{
    int32 product_id=1;
    string product_name=2;
    double unit_price=3;
    int32 units_in_stock=4;
    bool discontinued=5;
    int32 category_id=6;
}

message EditProductResponse
{
    int32 product_id=1;
    string product_name=2;
    double unit_price=3;
    int32 units_in_stock=4;
    bool discontinued=5;
    int32 category_id=6;
}

message GetDrinksResponse
{
    int32 product_id=1;
    string product_name=2;
    double unit_price=3;
    int32 units_in_stock=4;
    bool discontinued=5;
    int32 category_id=6;
}

message GetProductsByCategoryResponse
{
    int32 product_id=1;
    string product_name=2;
    double unit_price=3;
    int32 units_in_stock=4;
    bool discontinued=5;
    int32 category_id=6;
}

message GetProductsByCategoryRequest
{
    int32 category_id=1;
}